# dns-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  pyproject.toml  releaserc.toml
.github/: codecov.yml  renovate.json
.github/workflows/: codestyle.yml  coverage.yml  issue-auto-comments.yml  issues-translate.yml  publish.yml  python-publish.yml  readme-translation-sync.yml  release.yml  static-check.yml  test.yml
auto_ddns/: __main__.py  update_dnspod.py  utils.py
auto_ddns/get_ip/: base.py  snmp.py
auto_ddns/getter/: __init__.py  base.py  snmp.py
auto_ddns/model/: __init__.py  config.py  record.py
auto_ddns/set_dns/: __init__.py  base.py  dnspod.py  utils.py
auto_ddns/setter/: base.py  dnspod.py  utils.py
auto_dns/: __main__.py  update_dnspod.py
dns_manager/: __main__.py  utils.py
dns_manager/getter/: __init__.py  public.py  snmp.py  utils.py
dns_manager/model/: config.py  record.py
dns_manager/setter/: __init__.py  base.py  dnspod.py  lexicon.py
examples/: simple.toml
tests/: test_classify_record.py  test_e2e.py
